--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 # JDBC properties
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion_cabinet_avocat_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
